--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>NSCameraUsageDescription</key>
+    <string>We use your camera to let you take photos and upload to your profile and portfolios</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We use your microphone to let take you upload your voice recordings</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We use your camera roll to let you attach photos to upload as your profile image and portfolio images</string>
+
 </dict>
 </plist>
