--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  dio: ^3.0.9
+  dio_flutter_transformer: ^3.0.2
+  dio_http_cache: ^0.2.7
+  equatable: ^1.2.0
+  multi_image_picker: ^4.6.7
+  cached_network_image: ^2.2.0+1
   cupertino_icons: ^0.1.3
+  get: ^3.1.0
+  get_storage: ^1.2.1
+  bottom_navy_bar: ^5.4.0
+  flutter_svg:  ^0.17.4
+  flutter_form_builder: ^4.0.0-alpha.5
+  dotted_border: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +53,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/svg/
+    - assets/svg/button/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
